environment/k8s/dummy-test-app/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-test-app-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dummy-test-app
